--- a/scss/_colorStyle.scss
+++ b/scss/_colorStyle.scss
@@ -215,6 +215,9 @@ $help_uploadBox_Border: #cccccc;
     }
 }
 
+$footer_BG: linear-gradient(to top,#bc9c64 4%,#f3d197 93%);
+$footerHov_BG: #b8151a;
+
 //table
 $table_BG: #ffffff;
 $table_TitleBG: linear-gradient(to top,#b78c4b 0%,#d5ab6a 100%);
