--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,129 +1,124 @@
 //footer
 footer {
-    width: 100%;
-    height: 20vw;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: flex-end;
-    z-index: 100;
+  width: 100%;
+  height: 20vw;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: flex-end;
+  z-index: 100;
 
-    &.index {
-
-        ul {
-
-            li {
-
-                &:nth-of-type(1) {
-                    
-                    a {
-                        width: 16vw;
-                        height: 16vw;
-                        border-radius: 50%;
-                        top: -5vw;
-                        left: 3vw;
-                    }
-                }
-            }
-        }
-    }
-    &.event {
-
-        ul {
-
-            li {
-
-                &:nth-of-type(2) {
-                    
-                    a {
-                        width: 16vw;
-                        height: 16vw;
-                        border-radius: 50%;
-                        top: -5vw;
-                        left: 3vw;
-                    }
-                }
-            }
-        }
-    }
-    &.wallet {
-
-        ul {
-
-            li {
-
-                &:nth-of-type(3) {
-                    
-                    a {
-                        width: 16vw;
-                        height: 16vw;
-                        border-radius: 50%;
-                        top: -5vw;
-                        left: 50%;
-                        transform: translateX(-50%);
-                    }
-                }
-            }
-        }
-    }
-    &.service {
-
-        ul {
-
-            li {
-
-                &:nth-of-type(4) {
-                    
-                    a {
-                        width: 16vw;
-                        height: 16vw;
-                        border-radius: 50%;
-                        top: -5vw;
-                        left: 1.5vw;
-                    }
-                }
-            }
-        }
-    }
-    &.user {
-
-        ul {
-
-            li {
-
-                &:nth-of-type(5) {
-                    
-                    a {
-                        width: 16vw;
-                        height: 16vw;
-                        border-radius: 50%;
-                        top: -5.2vw;
-                        left: 1vw;
-                    }
-                }
-            }
-        }
-    }
-
+  &.index {
     ul {
         width: 100%;
-        height: 13vw;
+        height: 52px;
+        background: $footer_BG;
         display: flex;
-
+    
         li {
-            width: 20%;
-            height: 100%;
-            position: relative;
-
-            a {
-                position: absolute;
-                top: 0;
-                left: 0;
-                display: block;
-                width: 100%;
-                height: 100%;
+          width: 20%;
+          height: 100%;
+          position: relative;
+    
+          &::before {
+            content: " ";
+            width: 15vw;
+            height: 15vw;
+            background: $footerHov_BG;
+            border-radius: 50%;
+            position: absolute;
+            top: -18px;
+            left: 8px;
+            opacity: 0;
+          }
+    
+          a {
+            width: 6.5vw;
+            height: 6.5vw;
+            display: block;
+            align-items: center;
+            position: absolute;
+            top: 12px;
+            left: 26px;
+          }
+    
+          &:hover,
+          &:active,
+          &.active {
+            &::before {
+              opacity: 1;
             }
+    
+            a {
+              transform: translateX(-0.5px);
+              transform: translateY(-15px);
+    
+              &.home {
+                transform: translate(-1px, -15px);
+              }
+    
+              &.wallet {
+                transform: translateY(-14px);
+              }
+            }
+          }
         }
+      }
+  }
+
+  ul {
+    width: 100%;
+    height: 52px;
+    background: $footer_BG;
+    display: flex;
+
+    li {
+      width: 20%;
+      height: 100%;
+      position: relative;
+
+      &::before {
+        content: " ";
+        width: 15vw;
+        height: 15vw;
+        background: $footerHov_BG;
+        border-radius: 50%;
+        position: absolute;
+        top: -18px;
+        left: 8px;
+        opacity: 0;
+      }
+
+      a {
+        width: 6.5vw;
+        height: 6.5vw;
+        display: block;
+        align-items: center;
+        position: absolute;
+        top: 12px;
+        left: 26px;
+      }
+
+      &:active,
+      &.active {
+        &::before {
+          opacity: 1;
+        }
+
+        a {
+          transform: translateX(-0.5px);
+          transform: translateY(-15px);
+
+          &.home {
+            transform: translate(-1px, -15px);
+          }
+
+          &.wallet {
+            transform: translateY(-14px);
+          }
+        }
+      }
     }
+  }
 }
