--- a/css/style.css
+++ b/css/style.css
@@ -1601,59 +1601,6 @@ html body footer {
           align-items: flex-end;
   z-index: 100;
 }
-html body footer.index ul {
-  width: 100%;
-  height: 52px;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(4%, #bc9c64), color-stop(93%, #f3d197));
-  background: linear-gradient(to top, #bc9c64 4%, #f3d197 93%);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-html body footer.index ul li {
-  width: 20%;
-  height: 100%;
-  position: relative;
-}
-html body footer.index ul li::before {
-  content: " ";
-  width: 15vw;
-  height: 15vw;
-  background: #b8151a;
-  border-radius: 50%;
-  position: absolute;
-  top: -18px;
-  left: 8px;
-  opacity: 0;
-}
-html body footer.index ul li a {
-  width: 6.5vw;
-  height: 6.5vw;
-  display: block;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: absolute;
-  top: 12px;
-  left: 26px;
-}
-html body footer.index ul li:hover::before, html body footer.index ul li:active::before, html body footer.index ul li.active::before {
-  opacity: 1;
-}
-html body footer.index ul li:hover a, html body footer.index ul li:active a, html body footer.index ul li.active a {
-  -webkit-transform: translateX(-0.5px);
-          transform: translateX(-0.5px);
-  -webkit-transform: translateY(-15px);
-          transform: translateY(-15px);
-}
-html body footer.index ul li:hover a.home, html body footer.index ul li:active a.home, html body footer.index ul li.active a.home {
-  -webkit-transform: translate(-1px, -15px);
-          transform: translate(-1px, -15px);
-}
-html body footer.index ul li:hover a.wallet, html body footer.index ul li:active a.wallet, html body footer.index ul li.active a.wallet {
-  -webkit-transform: translateY(-14px);
-          transform: translateY(-14px);
-}
 html body footer ul {
   width: 100%;
   height: 52px;
@@ -1670,14 +1617,11 @@ html body footer ul li {
 }
 html body footer ul li::before {
   content: " ";
-  width: 15vw;
-  height: 15vw;
-  background: #b8151a;
-  border-radius: 50%;
+  width: 0;
+  height: 0;
   position: absolute;
   top: -18px;
   left: 8px;
-  opacity: 0;
 }
 html body footer ul li a {
   width: 6.5vw;
@@ -1687,25 +1631,27 @@ html body footer ul li a {
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  top: 12px;
-  left: 26px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
-html body footer ul li:active::before, html body footer ul li.active::before {
-  opacity: 1;
+html body footer ul li:hover::before, html body footer ul li:active::before, html body footer ul li.active::before {
+  content: " ";
+  width: 15vw;
+  height: 15vw;
+  background: #b8151a;
+  border-radius: 50%;
+  top: -35%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
-html body footer ul li:active a, html body footer ul li.active a {
-  -webkit-transform: translateX(-0.5px);
-          transform: translateX(-0.5px);
-  -webkit-transform: translateY(-15px);
-          transform: translateY(-15px);
-}
-html body footer ul li:active a.home, html body footer ul li.active a.home {
-  -webkit-transform: translate(-1px, -15px);
-          transform: translate(-1px, -15px);
-}
-html body footer ul li:active a.wallet, html body footer ul li.active a.wallet {
-  -webkit-transform: translateY(-14px);
-          transform: translateY(-14px);
+html body footer ul li:hover a, html body footer ul li:active a, html body footer ul li.active a {
+  top: -6%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 html body .filter {
   width: 100%;
