--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,64 +9,6 @@ footer {
   align-items: flex-end;
   z-index: 100;
 
-  &.index {
-    ul {
-        width: 100%;
-        height: 52px;
-        background: $footer_BG;
-        display: flex;
-    
-        li {
-          width: 20%;
-          height: 100%;
-          position: relative;
-    
-          &::before {
-            content: " ";
-            width: 15vw;
-            height: 15vw;
-            background: $footerHov_BG;
-            border-radius: 50%;
-            position: absolute;
-            top: -18px;
-            left: 8px;
-            opacity: 0;
-          }
-    
-          a {
-            width: 6.5vw;
-            height: 6.5vw;
-            display: block;
-            align-items: center;
-            position: absolute;
-            top: 12px;
-            left: 26px;
-          }
-    
-          &:hover,
-          &:active,
-          &.active {
-            &::before {
-              opacity: 1;
-            }
-    
-            a {
-              transform: translateX(-0.5px);
-              transform: translateY(-15px);
-    
-              &.home {
-                transform: translate(-1px, -15px);
-              }
-    
-              &.wallet {
-                transform: translateY(-14px);
-              }
-            }
-          }
-        }
-      }
-  }
-
   ul {
     width: 100%;
     height: 52px;
@@ -80,14 +22,11 @@ footer {
 
       &::before {
         content: " ";
-        width: 15vw;
-        height: 15vw;
-        background: $footerHov_BG;
-        border-radius: 50%;
+        width: 0;
+        height: 0;
         position: absolute;
         top: -18px;
         left: 8px;
-        opacity: 0;
       }
 
       a {
@@ -96,28 +35,32 @@ footer {
         display: block;
         align-items: center;
         position: absolute;
-        top: 12px;
-        left: 26px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
 
+      &:hover,
       &:active,
       &.active {
+
         &::before {
-          opacity: 1;
+          content: " ";
+          width: 15vw;
+          height: 15vw;
+          background: $footerHov_BG;
+          border-radius: 50%;
+          top: -35%;
+          left: 50%;
+          transform: translateX(-50%);
         }
 
-        a {
-          transform: translateX(-0.5px);
-          transform: translateY(-15px);
+       a {
+          top: -6%;
+          left: 50%;
+          transform: translateX(-50%);
+       }
 
-          &.home {
-            transform: translate(-1px, -15px);
-          }
-
-          &.wallet {
-            transform: translateY(-14px);
-          }
-        }
       }
     }
   }
