--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -40,7 +40,7 @@ footer {
         transform: translate(-50%, -50%);
       }
 
-      &:hover,
+      // &:hover,
       &:active,
       &.active {
 
