--- a/css/style.css
+++ b/css/style.css
@@ -1619,9 +1619,13 @@ html body footer ul li::before {
   content: " ";
   width: 0;
   height: 0;
+  background: #b8151a;
+  border-radius: 50%;
   position: absolute;
-  top: -18px;
-  left: 8px;
+  top: -35%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 html body footer ul li a {
   width: 6.5vw;
@@ -1637,21 +1641,13 @@ html body footer ul li a {
           transform: translate(-50%, -50%);
 }
 html body footer ul li:active::before, html body footer ul li.active::before {
-  content: " ";
   width: 15vw;
   height: 15vw;
-  background: #b8151a;
-  border-radius: 50%;
-  top: -35%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
 }
 html body footer ul li:active a, html body footer ul li.active a {
   top: -6%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
 }
 html body .filter {
   width: 100%;
