--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -20,43 +20,44 @@ footer {
       height: 100%;
       position: relative;
 
-      &::before {
-        content: " ";
-        width: 0;
-        height: 0;
-        background: $footerHov_BG;
-        border-radius: 50%;
-        position: absolute;
-        top: -35%;
-        left: 50%;
-        transform: translateX(-50%);
-      }
-
       a {
-        width: 6.5vw;
-        height: 6.5vw;
+        width: 100%;
+        height: 100%;
         display: block;
-        align-items: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        background-size: contain;
+        position: relative;
+
+        &::before {
+          content: " ";
+          width: 6.5vw;
+          height: 6.5vw;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
       }
 
       // &:hover,
       &:active,
       &.active {
-
-        &::before {
+        a {
           width: 15vw;
           height: 15vw;
-        }
+          background: $footerHov_BG;
+          border-radius: 50%;
+          position: absolute;
+          top: -35%;
+          left: 50%;
+          transform: translateX(-50%);
 
-       a {
-          top: -6%;
-          transform: translate(-50%, 0);
-       }
+          &::before {
+            top: 25%;
+            transform: translate(-50%, 0);
+          }
+        }
       }
     }
   }
 }
+
