--- a/scss/_help.scss
+++ b/scss/_help.scss
@@ -193,6 +193,9 @@
             &.help_about_license {
                 height: 135vw;
             }
+            &.depositWay {
+                height: 53vw;
+            }
         }
 
         .uploadBox {
