--- a/scss/_imgStyle.scss
+++ b/scss/_imgStyle.scss
@@ -411,6 +411,10 @@ footer .member::before {
     background: url('../images/help/help_about_license.png') no-repeat;
     background-size: contain;
 }
+.helpInner .img.depositWay {
+    background: url('../images/help/help_depositWay.jpg') no-repeat;
+    background-size: contain;
+}
 
 //deposit
 .depositWrap .depList .vega_ic {
