--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -24,8 +24,9 @@ footer {
         width: 100%;
         height: 100%;
         display: block;
-        background-size: contain;
-        position: relative;
+        position: absolute;
+        top: 0;
+        left: 0;
 
         &::before {
           content: " ";
@@ -38,23 +39,16 @@ footer {
         }
       }
 
-      // &:hover,
-      &:active,
       &.active {
+
         a {
           width: 15vw;
           height: 15vw;
           background: $footerHov_BG;
           border-radius: 50%;
-          position: absolute;
           top: -35%;
           left: 50%;
           transform: translateX(-50%);
-
-          &::before {
-            top: 25%;
-            transform: translate(-50%, 0);
-          }
         }
       }
     }
