--- a/scss/_jumpWindow.scss
+++ b/scss/_jumpWindow.scss
@@ -299,7 +299,7 @@
                 .checkBtn {
                     width: 70%;
                     height: 9.87vw;
-                    @include signupBtn;
+                    @include secondBtn;
                     flex-shrink: 0;
                 }
             }
@@ -558,7 +558,7 @@
                 button {
                     width: 70%;
                     height: 42px;
-                    @include signupBtn;
+                    @include secondBtn;
                     margin-bottom: 12px;
                 }
 
