--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -121,6 +121,13 @@ header {
             }
         }
 
+        .agentRegisterBtn {
+            width: auto;
+            height: 7vw;
+            @include secondBtn;
+            padding: 0 10px;
+        }
+
         &.helpPage {
             display: none;
 
