--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -45,5 +45,6 @@ html {
         @import "./transfer";
         @import "./withdrawal";
         @import "./invite";
+        @import "./agent";
     }
 }
