--- a/scss/_imgStyle.scss
+++ b/scss/_imgStyle.scss
@@ -243,6 +243,10 @@ footer .agentPrivacy::before {
     background: url('../images/icon/svg/member_option_lang.svg') no-repeat center;
     background-size: contain;
 }
+.memberWrap .optionBox .agent_ic::before {
+    background: url('../images/icon/svg/member_option_agent.svg') no-repeat center;
+    background-size: contain;
+}
 .memberWrap .optionBox .logout_ic::before {
     background: url('../images/icon/svg/member_option_logout.svg') no-repeat center;
     background-size: contain;
