--- a/scss/_imgStyle.scss
+++ b/scss/_imgStyle.scss
@@ -551,6 +551,10 @@ footer .agentPrivacy::before {
     background: url('../images/icon/baido.png') no-repeat;
     background-size: contain;
 }
+.jumpWindow.plsGo2 .img {
+    background: url('../images/register_susBG.png') no-repeat;
+    background-size: contain;
+}
 
 //agent
 .agentWrap .topBanner {
