--- a/scss/_imgStyle.scss
+++ b/scss/_imgStyle.scss
@@ -640,6 +640,12 @@ footer .agentPrivacy::before {
     background-size: contain;
 }
 
+//aside
+aside .inviteFriend {
+    background: url('../images/inviteFriend.gif') no-repeat;
+    background-size: 100%;
+}
+
 
 ////////img↓
 
