--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -354,3 +354,18 @@
         }
     }
 }
+
+//aside
+aside {
+    position: relative;
+    .sideBtn {
+        position: fixed;
+        bottom: 64px;
+        right: 10px;
+
+        .inviteFriend {
+            width: 92px;
+            height: 108px;
+        }
+    }
+}
