--- a/css/style.css
+++ b/css/style.css
@@ -2499,6 +2499,10 @@ html body .filter .jumpWindow.betWindow .bottom .inputBox {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -2506,7 +2510,7 @@ html body .filter .jumpWindow.betWindow .bottom .inputBox {
 }
 html body .filter .jumpWindow.betWindow .top .inputBox input,
 html body .filter .jumpWindow.betWindow .bottom .inputBox input {
-  width: 300px;
+  width: 100%;
   height: 42px;
   background: #ffffff;
   border-radius: 5px;
@@ -2517,6 +2521,7 @@ html body .filter .jumpWindow.betWindow .bottom .inputBox input {
   font-size: 3.4vw;
   font-weight: bold;
   padding-left: 16px;
+  margin: 0 auto;
 }
 html body .filter .jumpWindow.betWindow .top .inputBox input::-webkit-input-placeholder, html body .filter .jumpWindow.betWindow .bottom .inputBox input::-webkit-input-placeholder {
   color: #a3a3a3;
@@ -2533,6 +2538,37 @@ html body .filter .jumpWindow.betWindow .top .inputBox input::-ms-input-placehol
 html body .filter .jumpWindow.betWindow .top .inputBox input::placeholder,
 html body .filter .jumpWindow.betWindow .bottom .inputBox input::placeholder {
   color: #a3a3a3;
+}
+html body .filter .jumpWindow.betWindow .top .inputBox .BtnArea,
+html body .filter .jumpWindow.betWindow .bottom .inputBox .BtnArea {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 3vw auto;
+}
+html body .filter .jumpWindow.betWindow .top .inputBox .BtnArea button,
+html body .filter .jumpWindow.betWindow .bottom .inputBox .BtnArea button {
+  background: -webkit-gradient(linear, left bottom, left top, from(#e7e7e7), to(#ffffff));
+  background: linear-gradient(to top, #e7e7e7 0%, #ffffff 100%);
+  border-radius: 30px;
+  border: solid 1px #b8151a;
+  color: #b8151a;
+  font-size: 3.4vw;
+  font-weight: bold;
+  border-radius: 5px;
+  margin-right: 1vw;
+}
+html body .filter .jumpWindow.betWindow .top .inputBox .BtnArea button:active, html body .filter .jumpWindow.betWindow .top .inputBox .BtnArea button.active,
+html body .filter .jumpWindow.betWindow .bottom .inputBox .BtnArea button:active,
+html body .filter .jumpWindow.betWindow .bottom .inputBox .BtnArea button.active {
+  background: #b8151a;
+  color: #ffffff;
+}
+html body .filter .jumpWindow.betWindow .top .inputBox .BtnArea button:last-child,
+html body .filter .jumpWindow.betWindow .bottom .inputBox .BtnArea button:last-child {
+  margin-right: 0;
 }
 html body .filter .jumpWindow.betWindow .top .amount,
 html body .filter .jumpWindow.betWindow .bottom .amount {
