--- a/scss/_imgStyle.scss
+++ b/scss/_imgStyle.scss
@@ -295,10 +295,35 @@ footer .agentPrivacy::before {
     background: url('../images/vip_cardBG_1.png') no-repeat;
     background-size: contain;
 }
-.vipWrap .medal {
-    background: url('../images/medal.png') no-repeat;
+.vipWrap .medal.vip0 {
+    background: url('../images/levelMedal00.png') no-repeat;
     background-size: contain;
 }
+.vipWrap .medal {
+    background: url('../images/levelMedal02.png') no-repeat;
+    background-size: contain;
+}
+.vipWrap .medal.vip2 {
+    background: url('../images/levelMedal03.png') no-repeat;
+    background-size: contain;
+}
+.vipWrap .medal.vip3 {
+    background: url('../images/levelMedal04.png') no-repeat;
+    background-size: contain;
+}
+.vipWrap .medal.vip4 {
+    background: url('../images/levelMedal05.png') no-repeat;
+    background-size: contain;
+}
+.vipWrap .medal.vip5 {
+    background: url('../images/levelMedal06.png') no-repeat;
+    background-size: contain;
+}
+.vipWrap .medal.vip6 {
+    background: url('../images/levelMedal07.png') no-repeat;
+    background-size: contain;
+}
+
 .vipWrap .detailBtn {
     background: url('../images/vip_detailBtn.png') no-repeat;
     background-size: contain;
